docs: add general docs

--- a/src/pages/guides/general/contributing.en-US.mdx
+++ b/src/pages/guides/general/contributing.en-US.mdx
@@ -39,7 +39,7 @@ Some useful commands you may need:
 pnpm install
 
 # Start the development server
-pnpm dev:demo
+pnpm dev
 
 # Run tests
 pnpm test
