--- a/src/pages/guides/sheet/customization/ui.en-US.mdx
+++ b/src/pages/guides/sheet/customization/ui.en-US.mdx
@@ -7,9 +7,9 @@ import { Callout } from 'nextra/components'
 If you are writing a Univer plugin, you can easily use `IMenuService` in the dependency injection system to register menu items.
 
 
-## 新增菜单项
+## Adding Menu Items
 
-在 Univer 中，无论是顶部的工具栏菜单还是右键菜单，都可以通过编写插件来实现扩展。下面将介绍如何使用依赖注入系统中的 `IMenuService` 来注册菜单项。
+In Univer, both the top toolbar menu and the context menu can be extended by writing plugins. The following will introduce how to use `IMenuService` in the dependency injection system to register menu items.
 
 
 ### 1. Plugin Environment
